[project]
name = "cibersecurity-tools"
version = "1.0.0"
description = "Complete penetration testing toolkit for Kali Linux"
authors = [{name = "DavidsmSilva"}]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
keywords = ["pentesting", "security", "hacking", "cybersecurity", "kali-linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.scripts]
cibersec = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/DavidsmSilva/CiberSecurity-Tools"
Repository = "https://github.com/DavidsmSilva/CiberSecurity-Tools"